days checkbox correction of sizing on smaller screens

--- a/src/pages/Players/Player.css
+++ b/src/pages/Players/Player.css
@@ -66,6 +66,12 @@ input:focus::placeholder {
         height: 1rem;
         border-radius: 4px !important;
     }
+
+    .checkbox.active {
+        width: 1rem;
+        height: 1rem;
+        border-radius: 4px !important;
+    }
 }
 
 
